@@ -1,3 +1,7 @@
+1999-01-30  Yo Ric Dude  <ericmit@ix.netcom.com>
+
+	* proto.c: corrected stream play/record/monitor protocol data lengths
+
 1999-01-28  Felix Bellaby <felix@pooh.u-net.com>
 
 	* session.c: implements session management protocol to avoid race
